// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/grid/hidden should render with children 1`] = `
<span
  className=""
>
  Text
</span>
`;

exports[`components/grid/hidden should render with classname 1`] = `
<span
  className="foo"
>
  Text
</span>
`;

exports[`components/grid/hidden should render with print 1`] = `
<span
  className="print"
>
  Text
</span>
`;

exports[`components/grid/hidden should render with screen 1`] = `
<span
  className="screen"
>
  Text
</span>
`;
